--- a/index.html
+++ b/index.html
@@ -8,8 +8,40 @@
   </div>
 </div>
 
-<div>use this text to add content</div>
+
+<!use this text to explain your family (what family means to you)> 
+<!between this div an the previous, you will want to add a div element, probably an image>
+
 <div>
-  <h1>sample text</h1>
-    
+  <h2>Family</h2>
+  <h1>Sample text</h1>    
   </div>
+
+
+<!use this text to add content about the kinds of media that attract you>
+<!between this div an the previous, you will want to add a div element, probably an image>
+
+<div>
+  <h2>Entertainment</h2>
+  <h1>Sample text</h1>    
+  </div>
+
+<!use this text to describe your community(-ies)>
+<!between this div an the previous, you will want to add a div element, probably an image>
+
+<div>
+  <h2>Community</h2>
+  <h1>Sample text</h1>    
+  </div>
+
+<!use this text to add content about your schooling background>
+<!between this div an the previous, you will want to add a div element, probably an image>
+
+<div>
+  <h2>School</h2>
+  <h1>Sample text</h1>    
+  </div>
+
+<div>
+  Pitt Sparker
+   </div>
