--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!We'll start with this HERE. developers refer to this division as a hero block. Use this division to start things off.>
+<!-- We'll start with this HERE. developers refer to this division as a hero block. Use this division to start things off.>
 
 <div class="hero-image">
   <div class="hero-text">
@@ -9,8 +9,8 @@
 </div>
 
 
-<!use this text to explain your family (what family means to you)> 
-<!between this div an the previous, you will want to add a div element, probably an image>
+<!-- use this text to explain your family (what family means to you) --> 
+<!-- between this div an the previous, you will want to add a div element, probably an image -->
 
 <div>
   <h2>Family</h2>
@@ -18,24 +18,24 @@
   </div>
 
 
-<!use this text to add content about the kinds of media that attract you>
-<!between this div an the previous, you will want to add a div element, probably an image>
+<!-- use this text to add content about the kinds of media that attract you -->
+<!-- between this div an the previous, you will want to add a div element, probably an image -->
 
 <div>
   <h2>Entertainment</h2>
   <h1>Sample text</h1>    
   </div>
 
-<!use this text to describe your community(-ies)>
-<!between this div an the previous, you will want to add a div element, probably an image>
+<!-- use this text to describe your community(-ies) -->
+<!-- between this div an the previous, you will want to add a div element, probably an image -->
 
 <div>
   <h2>Community</h2>
   <h1>Sample text</h1>    
   </div>
 
-<!use this text to add content about your schooling background>
-<!between this div an the previous, you will want to add a div element, probably an image>
+<!-- use this text to add content about your schooling background -->
+<!-- between this div an the previous, you will want to add a div element, probably an image -->
 
 <div>
   <h2>School</h2>
