--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
-<!-- We'll start with this HERE. developers refer to this division as a hero block. Use this division to start things off.>
+<!DOCTYPE html>
+
+<html>
+  <head>
+
+<!-- We'll start HERE. developers refer to this division as a hero block. You will need to change the background image. Load the image (simplify the name) to your repository. Change the img.name in the code below>
 
 <div class="hero-image">
   <div class="hero-text">
     <h1>I am John Doe</h1>
     <p>And I'm a Photographer</p>
-    <button>Hire me</button>
   </div>
 </div>
 
 
-<!-- use this text to explain your family (what family means to you) --> 
-<!-- between this div an the previous, you will want to add a div element, probably an image -->
+<!use this text to explain your family (what family means to you)> 
+<!between this div an the previous, you will want to add a div element, probably an image> 
 
 <div>
   <h2>Family</h2>
@@ -18,24 +22,24 @@
   </div>
 
 
-<!-- use this text to add content about the kinds of media that attract you -->
-<!-- between this div an the previous, you will want to add a div element, probably an image -->
+<!use this text to add content about the kinds of media that attract you>
+<!between this div an the previous, you will want to add a div element, probably an image> 
 
 <div>
   <h2>Entertainment</h2>
   <h1>Sample text</h1>    
   </div>
 
-<!-- use this text to describe your community(-ies) -->
-<!-- between this div an the previous, you will want to add a div element, probably an image -->
+<!use this text to describe your community(-ies)> 
+<!between this div an the previous, you will want to add a div element, probably an image > 
 
 <div>
   <h2>Community</h2>
   <h1>Sample text</h1>    
   </div>
 
-<!-- use this text to add content about your schooling background -->
-<!-- between this div an the previous, you will want to add a div element, probably an image -->
+<!use this text to add content about your schooling background> 
+<!between this div an the previous, you will want to add a div element, probably an image> 
 
 <div>
   <h2>School</h2>
@@ -45,3 +49,7 @@
 <div>
 <p>Sparker</p>
    </div>
+
+   
+  </head>
+     </html>
