--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ In this doc., you will work through Gregory Ulmer's four discourses of family, e
 
 <div class="hero-image">
   <div class="hero-text">
-      <h1>I am John en Fuego</h1>
-      <h6>And I Study Electracy</h6>
+      <h1>I am Yufei Tang</h1>
+      <h6>And I Study Materials Sience and Engineering</h6>
   </div>
 </div>
 
