--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ FUN FACT: "Lorem ipsum", "Lorem ipsum" was hacked out of Cicero's "De finibus bo
   </body>
      </html>
 
-<!--Anticopyright. Peace and love only, S.J. Quigley, University of Pittsburgh-->
+<!--MIT License. Peace and love only, S.J. Quigley, University of Pittsburgh-->
 
 <!--
 Looking to add components? You have come to the right place. Copy and paste the code into your body.
