--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Now, change the other relevant information in this section, especially if you're
 
 <div class="hero-image">
   <div class="hero-text">
-      <h1>I am Changed</h1>
+      <h1>I am John en Fuego</h1>
       <h2>And I Study Electracy</h2>
   </div>
 </div>
