--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@ FUN FACT: "Lorem ipsum", "Lorem ipsum" was hacked out of Cicero's "De finibus bo
      ***Embed YouTube Video***
 
      <div class="video">
-       <div class="video-container">
-         <iframe src="https://www.youtube.com/embed/VIDEO ID" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-     </div>
-         <p>Add a caption.</p>
+      <div class="video-container">
+        <<iframe width="560" height="315" src="https://www.youtube.com/embed/PhPLTpqG0pU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>>
+      </div>
+        <p>Add a caption.</p>
      </div>
 
 
